<resources>
  <string name="app_name">Audio Pop</string>
  <string name="navigation_drawer_open">Open navigation drawer</string>
  <string name="navigation_drawer_close">Close navigation drawer</string>
  <string name="sensitivity_slider_label">Sensitivity Input</string>
  <string name="stock_rButton">Stock</string>
  <string name="aftermarket_rButton">Aftermarket</string>
  <string name="save_setup_button">Save</string>
  <string name="skip_button">Skip</string>
  <string name="action_logout">Logout</string>

  <string name="setup_title">Setup</string>
  <string name="setup_title_hint">Enter a title for the setup.</string>
  <string name="setup_gear_hint">Select gear for the setup.</string>
  <string name="setup_notes_hint">Enter notes for the setup.</string>
  <string name="setup_title_label">Title</string>
  <string name="setup_notes_label">Pre-Notes</string>

  <string-array name="test_array">
    <item>Mono</item>
    <item>Stereo 2 ch</item>
    <item>Stereo 4 ch</item>
  </string-array>
  <string name="action_settings">Settings</string>
  <string name="test_title">Test</string>
  <string name="test_save_button">Save Test</string>
  <string name="test_mono_label">Mono</string>
  <string name="test_stereo2_label">Stereo 2 Channel</string>
  <string name="test_stereo4_label">Stereo 4 Channel</string>
  <string name="test_left">Left Ch</string>
  <string name="test_left_front">Left Front Ch</string>
  <string name="test_left_rear">Left Rear Ch</string>
  <string name="test_right">Right Ch</string>
  <string name="test_right_front">Right Front Ch</string>
  <string name="test_right_rear">Right Rear Ch</string>
  <string name="test_notes">Enter notes for test:</string>

  <string name="raw_filename_format">%1$tY%1$tm%1$td%1$tH%1$tM%1$tS.raw</string>
  <string name="wav_filename_format">%1$tY%1$tm%1$td%1$tH%1$tM%1$tS.wav</string>
  <string name="under_construction">Coming Soon!</string>

</resources>
