<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
  xmlns:android="http://schemas.android.com/apk/res/android"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  android:layout_margin="@dimen/margin_value">

  <Button
    android:id="@+id/left_front_button"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/test_left_front"
    android:layout_marginBottom="@dimen/margin_value"
    app:layout_constraintLeft_toLeftOf="parent"
    app:layout_constraintRight_toLeftOf="@+id/right_front_button"
    app:layout_constraintBottom_toTopOf="@+id/left_rear_button"/>

  <Button
    android:id="@+id/right_front_button"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/test_right_front"
    android:layout_marginBottom="@dimen/margin_value"
    app:layout_constraintLeft_toRightOf="@id/left_front_button"
    app:layout_constraintRight_toRightOf="parent"
    app:layout_constraintBottom_toTopOf="@+id/left_rear_button"/>

  <Button
    android:id="@+id/left_rear_button"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/test_left_rear"
    app:layout_constraintTop_toTopOf="parent"
    app:layout_constraintLeft_toLeftOf="parent"
    app:layout_constraintRight_toLeftOf="@+id/right_rear_button"
    app:layout_constraintBottom_toBottomOf="parent"/>

  <Button
    android:id="@+id/right_rear_button"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/test_right_rear"
    app:layout_constraintTop_toTopOf="parent"
    app:layout_constraintLeft_toRightOf="@id/left_rear_button"
    app:layout_constraintRight_toRightOf="parent"
    app:layout_constraintBottom_toBottomOf="parent"/>

  <TextView
    android:id="@+id/sensitivity_slider_label"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/sensitivity_slider_label"
    android:layout_margin="@dimen/margin_value"
    app:layout_constraintTop_toBottomOf="@id/right_rear_button"
    app:layout_constraintLeft_toLeftOf="parent"
    app:layout_constraintRight_toRightOf="parent"
    app:layout_constraintBottom_toBottomOf="parent"/>
  <SeekBar
    android:id="@+id/sensitivity_slider"
    android:layout_width="match_parent"
    android:layout_height="0dp"
    android:layout_margin="@dimen/margin_value"
    app:layout_constraintTop_toBottomOf="@id/sensitivity_slider_label"
    app:layout_constraintBottom_toBottomOf="parent"/>

</android.support.constraint.ConstraintLayout>