<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
  xmlns:android="http://schemas.android.com/apk/res/android"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  android:layout_margin="13dp">

  <android.support.constraint.ConstraintLayout
    android:id="@+id/notes_popup"
    android:visibility="invisible"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginTop="100dp"
    app:layout_constraintTop_toTopOf="parent"
    app:layout_constraintLeft_toLeftOf="parent"
    app:layout_constraintRight_toRightOf="parent">
    <EditText
      android:id="@+id/test_notes"
      android:hint="@string/test_notes"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      app:layout_constraintTop_toTopOf="parent"
      app:layout_constraintLeft_toLeftOf="parent"
      app:layout_constraintRight_toRightOf="parent"
      app:layout_constraintBottom_toTopOf="@+id/test_save"/>

    <Button
      android:id="@+id/skip_button"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:text="@string/skip_button"
      app:layout_constraintLeft_toLeftOf="parent"
      app:layout_constraintRight_toLeftOf="@+id/test_save"
      app:layout_constraintTop_toBottomOf="@id/test_notes"
      app:layout_constraintBottom_toBottomOf="parent"/>

    <Button
      android:id="@+id/test_save"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:text="@string/test_save_button"
      app:layout_constraintLeft_toRightOf="@id/skip_button"
      app:layout_constraintRight_toRightOf="parent"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintTop_toBottomOf="@id/test_notes"/>

  </android.support.constraint.ConstraintLayout>

  <Button
    android:id="@+id/test_button"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:text="@string/test_mono_label"
    app:layout_constraintTop_toTopOf="parent"
    app:layout_constraintLeft_toLeftOf="parent"
    app:layout_constraintRight_toRightOf="parent"
    app:layout_constraintBottom_toBottomOf="parent"/>

  <TextView
    android:id="@+id/sensitivity_slider_label"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/sensitivity_slider_label"
    android:layout_margin="@dimen/margin_value"
    app:layout_constraintTop_toBottomOf="@id/test_button"
    app:layout_constraintLeft_toLeftOf="parent"
    app:layout_constraintRight_toRightOf="parent"
    app:layout_constraintBottom_toBottomOf="parent"/>
  <SeekBar
    android:id="@+id/sensitivity_slider"
    android:layout_width="match_parent"
    android:layout_height="0dp"
    android:layout_margin="@dimen/margin_value"
    app:layout_constraintTop_toBottomOf="@id/sensitivity_slider_label"
    app:layout_constraintBottom_toBottomOf="parent"/>

</android.support.constraint.ConstraintLayout>